Parser/YetAnotherGrammar/.antlr/yagParser.java
// Generated from /home/yan/Desktop/uppaal-abstraction-tool/Parser/YetAnotherGrammar/yag.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class yagParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, FOR=4, DO=5, WHILE=6, BREAK=7, CONTINUE=8, SWITCH=9, 
		CASE=10, DEFAULT=11, CONST=12, IF=13, ELSE=14, RETURN=15, INT=16, BOOL=17, 
		VOID=18, CHAN=19, BCAST=20, STRUCT=21, TYPEDEF=22, LPAREN=23, RPAREN=24, 
		LBRACE=25, RBRACE=26, LBRACK=27, RBRACK=28, SEMI=29, COMMA=30, DOT=31, 
		BANG=32, SUB=33, GT=34, LT=35, QUESTION=36, COLON=37, EQUAL=38, LE=39, 
		GE=40, NOTEQUAL=41, INC=42, DEC=43, ADD=44, MUL=45, DIV=46, BITAND=47, 
		BITOR=48, CARET=49, MOD=50, AND=51, OR=52, ASSIGN=53, ADD_ASSIGN=54, SUB_ASSIGN=55, 
		MUL_ASSIGN=56, DIV_ASSIGN=57, AND_ASSIGN=58, OR_ASSIGN=59, XOR_ASSIGN=60, 
		MOD_ASSIGN=61, LSHIFT_ASSIGN=62, RSHIFT_ASSIGN=63, INTEGER=64, BOOLEAN=65, 
		ID=66, WHITESPACE=67, BLOCK_COMMENT=68, LINE_COMMENT=69;
	public static final int
		RULE_file = 0, RULE_translation = 1, RULE_select_label = 2, RULE_select_pair = 3, 
		RULE_assignment_label = 4, RULE_synchronisation_label = 5, RULE_vdec_list = 6, 
		RULE_vdec = 7, RULE_arr_size = 8, RULE_fdec = 9, RULE_fparam_list = 10, 
		RULE_fparam = 11, RULE_block = 12, RULE_statement = 13, RULE_assignment_stmt = 14, 
		RULE_case_block = 15, RULE_expr_list = 16, RULE_expr = 17, RULE_vtype = 18, 
		RULE_bound_range = 19, RULE_assignmentOp = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "translation", "select_label", "select_pair", "assignment_label", 
			"synchronisation_label", "vdec_list", "vdec", "arr_size", "fdec", "fparam_list", 
			"fparam", "block", "statement", "assignment_stmt", "case_block", "expr_list", 
			"expr", "vtype", "bound_range", "assignmentOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'~'", "'<<'", "'>>'", "'for'", "'do'", "'while'", "'break'", "'continue'", 
			"'switch'", "'case'", "'default'", "'const'", "'if'", "'else'", "'return'", 
			"'int'", "'bool'", "'void'", "'chan'", "'broadcast'", "'struct'", "'typedef'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'!'", 
			"'-'", "'>'", "'<'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'++'", 
			"'--'", "'+'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'&&'", "'||'", 
			"'='", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", 
			"'<<='", "'>>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "FOR", "DO", "WHILE", "BREAK", "CONTINUE", "SWITCH", 
			"CASE", "DEFAULT", "CONST", "IF", "ELSE", "RETURN", "INT", "BOOL", "VOID", 
			"CHAN", "BCAST", "STRUCT", "TYPEDEF", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "BANG", "SUB", "GT", "LT", 
			"QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "INC", "DEC", "ADD", 
			"MUL", "DIV", "BITAND", "BITOR", "CARET", "MOD", "AND", "OR", "ASSIGN", 
			"ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", 
			"OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", 
			"INTEGER", "BOOLEAN", "ID", "WHITESPACE", "BLOCK_COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "yag.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		let constMap = {};

	public yagParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public TranslationContext translation() {
			return getRuleContext(TranslationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(yagParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			translation();
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TranslationContext extends ParserRuleContext {
		public List<Vdec_listContext> vdec_list() {
			return getRuleContexts(Vdec_listContext.class);
		}
		public Vdec_listContext vdec_list(int i) {
			return getRuleContext(Vdec_listContext.class,i);
		}
		public List<FdecContext> fdec() {
			return getRuleContexts(FdecContext.class);
		}
		public FdecContext fdec(int i) {
			return getRuleContext(FdecContext.class,i);
		}
		public TranslationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation; }
	}

	public final TranslationContext translation() throws RecognitionException {
		TranslationContext _localctx = new TranslationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_translation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(47);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(45);
					vdec_list();
					}
					break;
				case 2:
					{
					setState(46);
					fdec();
					}
					break;
				}
				}
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << INT) | (1L << BOOL) | (1L << CHAN) | (1L << BCAST))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_labelContext extends ParserRuleContext {
		public List<Select_pairContext> select_pair() {
			return getRuleContexts(Select_pairContext.class);
		}
		public Select_pairContext select_pair(int i) {
			return getRuleContext(Select_pairContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(yagParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(yagParser.COMMA, i);
		}
		public Select_labelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_label; }
	}

	public final Select_labelContext select_label() throws RecognitionException {
		Select_labelContext _localctx = new Select_labelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			select_pair();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(52);
				match(COMMA);
				setState(53);
				select_pair();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_pairContext extends ParserRuleContext {
		public Token vid;
		public VtypeContext range;
		public TerminalNode COLON() { return getToken(yagParser.COLON, 0); }
		public TerminalNode ID() { return getToken(yagParser.ID, 0); }
		public VtypeContext vtype() {
			return getRuleContext(VtypeContext.class,0);
		}
		public Select_pairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_pair; }
	}

	public final Select_pairContext select_pair() throws RecognitionException {
		Select_pairContext _localctx = new Select_pairContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_select_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			((Select_pairContext)_localctx).vid = match(ID);
			setState(60);
			match(COLON);
			setState(61);
			((Select_pairContext)_localctx).range = vtype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assignment_labelContext extends ParserRuleContext {
		public List<Assignment_stmtContext> assignment_stmt() {
			return getRuleContexts(Assignment_stmtContext.class);
		}
		public Assignment_stmtContext assignment_stmt(int i) {
			return getRuleContext(Assignment_stmtContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(yagParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(yagParser.COMMA, i);
		}
		public Assignment_labelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_label; }
	}

	public final Assignment_labelContext assignment_label() throws RecognitionException {
		Assignment_labelContext _localctx = new Assignment_labelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			assignment_stmt();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(64);
				match(COMMA);
				setState(65);
				assignment_stmt();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Synchronisation_labelContext extends ParserRuleContext {
		public ExprContext chan;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode QUESTION() { return getToken(yagParser.QUESTION, 0); }
		public TerminalNode BANG() { return getToken(yagParser.BANG, 0); }
		public Synchronisation_labelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_synchronisation_label; }
	}

	public final Synchronisation_labelContext synchronisation_label() throws RecognitionException {
		Synchronisation_labelContext _localctx = new Synchronisation_labelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_synchronisation_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((Synchronisation_labelContext)_localctx).chan = expr(0);
			setState(72);
			_la = _input.LA(1);
			if ( !(_la==BANG || _la==QUESTION) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Vdec_listContext extends ParserRuleContext {
		public VtypeContext type;
		public List<VdecContext> vdec() {
			return getRuleContexts(VdecContext.class);
		}
		public VdecContext vdec(int i) {
			return getRuleContext(VdecContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(yagParser.SEMI, 0); }
		public VtypeContext vtype() {
			return getRuleContext(VtypeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(yagParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(yagParser.COMMA, i);
		}
		public Vdec_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vdec_list; }
	}

	public final Vdec_listContext vdec_list() throws RecognitionException {
		Vdec_listContext _localctx = new Vdec_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_vdec_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			((Vdec_listContext)_localctx).type = vtype();
			setState(75);
			vdec();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(76);
				match(COMMA);
				setState(77);
				vdec();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VdecContext extends ParserRuleContext {
		public Token vid;
		public Arr_sizeContext dim;
		public ExprContext init;
		public TerminalNode ID() { return getToken(yagParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(yagParser.ASSIGN, 0); }
		public Arr_sizeContext arr_size() {
			return getRuleContext(Arr_sizeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VdecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vdec; }
	}

	public final VdecContext vdec() throws RecognitionException {
		VdecContext _localctx = new VdecContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vdec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			((VdecContext)_localctx).vid = match(ID);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(86);
				((VdecContext)_localctx).dim = arr_size();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(89);
				match(ASSIGN);
				setState(90);
				((VdecContext)_localctx).init = expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arr_sizeContext extends ParserRuleContext {
		public List<TerminalNode> LBRACK() { return getTokens(yagParser.LBRACK); }
		public TerminalNode LBRACK(int i) {
			return getToken(yagParser.LBRACK, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> RBRACK() { return getTokens(yagParser.RBRACK); }
		public TerminalNode RBRACK(int i) {
			return getToken(yagParser.RBRACK, i);
		}
		public Arr_sizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arr_size; }
	}

	public final Arr_sizeContext arr_size() throws RecognitionException {
		Arr_sizeContext _localctx = new Arr_sizeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arr_size);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				match(LBRACK);
				setState(94);
				expr(0);
				setState(95);
				match(RBRACK);
				}
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LBRACK );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FdecContext extends ParserRuleContext {
		public VtypeContext ret;
		public Token fid;
		public Fparam_listContext params;
		public BlockContext bl;
		public TerminalNode LPAREN() { return getToken(yagParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(yagParser.RPAREN, 0); }
		public VtypeContext vtype() {
			return getRuleContext(VtypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(yagParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Fparam_listContext fparam_list() {
			return getRuleContext(Fparam_listContext.class,0);
		}
		public FdecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fdec; }
	}

	public final FdecContext fdec() throws RecognitionException {
		FdecContext _localctx = new FdecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fdec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((FdecContext)_localctx).ret = vtype();
			setState(102);
			((FdecContext)_localctx).fid = match(ID);
			setState(103);
			match(LPAREN);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << INT) | (1L << BOOL) | (1L << CHAN) | (1L << BCAST))) != 0)) {
				{
				setState(104);
				((FdecContext)_localctx).params = fparam_list();
				}
			}

			setState(107);
			match(RPAREN);
			setState(108);
			((FdecContext)_localctx).bl = block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fparam_listContext extends ParserRuleContext {
		public List<FparamContext> fparam() {
			return getRuleContexts(FparamContext.class);
		}
		public FparamContext fparam(int i) {
			return getRuleContext(FparamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(yagParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(yagParser.COMMA, i);
		}
		public Fparam_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fparam_list; }
	}

	public final Fparam_listContext fparam_list() throws RecognitionException {
		Fparam_listContext _localctx = new Fparam_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fparam_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			fparam();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(111);
				match(COMMA);
				setState(112);
				fparam();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FparamContext extends ParserRuleContext {
		public Token pid;
		public VtypeContext vtype() {
			return getRuleContext(VtypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(yagParser.ID, 0); }
		public Arr_sizeContext arr_size() {
			return getRuleContext(Arr_sizeContext.class,0);
		}
		public FparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fparam; }
	}

	public final FparamContext fparam() throws RecognitionException {
		FparamContext _localctx = new FparamContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fparam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			vtype();
			setState(119);
			((FparamContext)_localctx).pid = match(ID);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(120);
				arr_size();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(yagParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(yagParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(LBRACE);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << FOR) | (1L << DO) | (1L << WHILE) | (1L << SWITCH) | (1L << CONST) | (1L << IF) | (1L << RETURN) | (1L << INT) | (1L << BOOL) | (1L << CHAN) | (1L << BCAST) | (1L << LPAREN) | (1L << LBRACE) | (1L << BANG) | (1L << SUB) | (1L << INC) | (1L << DEC) | (1L << ADD))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (INTEGER - 64)) | (1L << (BOOLEAN - 64)) | (1L << (ID - 64)))) != 0)) {
				{
				{
				setState(124);
				statement();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Vdec_listContext vdec_list() {
			return getRuleContext(Vdec_listContext.class,0);
		}
		public TerminalNode FOR() { return getToken(yagParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(yagParser.LPAREN, 0); }
		public List<TerminalNode> SEMI() { return getTokens(yagParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(yagParser.SEMI, i);
		}
		public TerminalNode RPAREN() { return getToken(yagParser.RPAREN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Assignment_stmtContext> assignment_stmt() {
			return getRuleContexts(Assignment_stmtContext.class);
		}
		public Assignment_stmtContext assignment_stmt(int i) {
			return getRuleContext(Assignment_stmtContext.class,i);
		}
		public List<Expr_listContext> expr_list() {
			return getRuleContexts(Expr_listContext.class);
		}
		public Expr_listContext expr_list(int i) {
			return getRuleContext(Expr_listContext.class,i);
		}
		public TerminalNode IF() { return getToken(yagParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(yagParser.ELSE, 0); }
		public TerminalNode WHILE() { return getToken(yagParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(yagParser.DO, 0); }
		public TerminalNode SWITCH() { return getToken(yagParser.SWITCH, 0); }
		public List<Case_blockContext> case_block() {
			return getRuleContexts(Case_blockContext.class);
		}
		public Case_blockContext case_block(int i) {
			return getRuleContext(Case_blockContext.class,i);
		}
		public TerminalNode RETURN() { return getToken(yagParser.RETURN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(yagParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(yagParser.COMMA, i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}
